# axiom

./: .travis.yml  README.md
cmake/modules/: BundleUtilities.cmake
compiler/src/ast/: expression.rs
compiler/src/codegen/block/: gen_conditional.rs  mod.rs
compiler/src/codegen/functions/: if_function.rs  mod.rs
compiler/src/codegen/values/: any_value.rs  mod.rs
compiler/src/mir/: var_type.rs
compiler/src/mir/block/: function.rs  statement.rs
compiler/src/parser/: mod.rs  token.rs  token_stream.rs
compiler/src/pass/: lower_ast.rs
editor/: CMakeLists.txt
editor/backend/standalone/: CMakeLists.txt  bundle.cmake
editor/backend/vst2/: CMakeLists.txt
editor/widgets/node/: SyntaxHighlighter.cpp
